# dh-cli

./: .gitignore  CLAUDE.md  GO_README.md  Makefile  README.md  pyproject.toml
.claude/: settings.local.json
behaviour_tests/: CLAUDE.md  cli_test.go  go.mod  tui_test.go
go_behaviour_tests/: CLAUDE.md  cli_test.go  go.mod  helpers_test.go
go_src/: Makefile  go.mod  go.sum  main.go
go_unit_tests/: cmd_test.go  config_test.go  discovery_test.go  doctor_test.go  exec_test.go  go.mod  go.sum  java_test.go  output_test.go  tui_test.go  versions_test.go
plans/: add_exec_c_flag.md  add_vm_mode_exec.md  auto_pick_port.md  balloon_sparse_uffd.md  clear-command-interception.md  deephaven_cli_implementation_plan.md  dh_go_cli_initial_spec.md  dh_kill_command.md  dh_phase0_scaffold.md  dh_phase1a_config.md  dh_phase1b_java.md  dh_phase1c_discovery.md  dh_phase2_versions.md  dh_phase3_doctor.md  dh_phase4_tui.md  dh_phase5_packaging.md  dhg_go_cli_initial_spec.md  dhg_phase0_scaffold.md  dhg_phase1a_config.md  dhg_phase1b_java.md  dhg_phase1c_discovery.md  dhg_phase2_versions.md  dhg_phase3_doctor.md  dhg_phase4_tui.md  dhg_phase5_packaging.md  exec_local_cwd.md  fix_backtick_stdin.md  fix_quiet_flag_suppression.md  fix_repl_server_disconnect_spam.md  fix_table_reassignment_display.md  go_repl.md  host_filesystem_sharing_research.md  improve-cli-help.md  improve_show_tables_output.md  initial_plan.md  interactive_versions_screen.md  list_running_servers.md  make_quiet_mode_default.md  manage-servers-tui.md  phase4_live_tables.md  (+22 more)
sandbox/: Dockerfile  entrypoint-kvm.sh
src/: Makefile  go.mod  main.go
tests/: __init__.py  basic_import.py  basic_script.py  conftest.py  sample_data.csv  test_cli_integration.py  test_discovery.py  test_manager_activate.py  test_manager_cli.py  test_manager_config.py  test_manager_java.py  test_manager_pypi.py  test_manager_versions.py  test_phase1_scaffolding.py  test_phase2_server.py  test_phase3_client.py  test_phase4_executor.py  (+8 more)
(+238 files in other folders)
