[project]
name = "deephaven-cli"
version = "0.1.0"
description = "Command-line tool for interacting with Deephaven servers"
requires-python = ">=3.13"
dependencies = [
    "deephaven-server>=0.37.0",
    "pydeephaven>=0.37.0",
    "prompt_toolkit>=3.0.0",
    "pygments>=2.0.0",
    "deephaven-plugin-ui>=0.32.1",
    "deephaven-plugin-plotly-express>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
]

[project.scripts]
dh = "deephaven_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deephaven_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (may take >30s)",
    "integration: marks tests requiring external resources (server, Java)",
]
addopts = "-v --tb=short"
