[project]
name = "deephaven-cli"
version = "0.2.0"
description = "Command-line tool for interacting with Deephaven servers"
requires-python = ">=3.13"
dependencies = [
    "textual[syntax]>=1.0.0",
    "textual-fastdatatable>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.0",
    "ruff>=0.8.0",
    "ty>=0.0.1a7",
]

[project.scripts]
dh = "deephaven_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deephaven_cli"]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (may take >30s)",
    "integration: marks tests requiring external resources (server, Java)",
]
addopts = "-v --tb=short"
